--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "date-fns": "^1.30.1",
     "jwt-decode": "^2.2.0",
     "pure-react-carousel": "^1.21.2",
     "react": "^16.9.0",
