sidenav and goback button" "

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-API_ENDPOINT=https://chris-petful-server.herokuapp.com
+API_ENDPOINT=https://stormy-beyond-18995.herokuapp.com
+CLIENT_ID=67tbmv2gfetercp9rke84h8ale
+CLIENT_TOKEN=2a9ev7ddp43n80sn9e47eb7q5r
