finished professionals api

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.6",
+    "client-oauth2": "^4.2.5",
     "date-fns": "^1.30.1",
     "jwt-decode": "^2.2.0",
     "pure-react-carousel": "^1.21.2",
@@ -13,7 +14,9 @@
     "react-oauth-flow": "^1.2.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.0"
+    "react-scripts": "3.1.0",
+    "react-select": "^3.0.4",
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
