Changed API endpoint to deployed server

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_ENDPOINT=http://localhost:8000/api
+API_ENDPOINT=https://stormy-beyond-18995.herokuapp.com
 CLIENT_ID=67tbmv2gfetercp9rke84h8ale
 CLIENT_TOKEN=2a9ev7ddp43n80sn9e47eb7q5r
 REACT_APP_TOKEN_KEY: 'jobreel-client-auth-token'
