--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.6",
     "client-oauth2": "^4.2.5",
     "date-fns": "^1.30.1",
+    "enzyme-to-json": "^3.4.0",
     "jwt-decode": "^2.2.0",
     "pure-react-carousel": "^1.21.2",
     "react": "^16.9.0",
@@ -46,6 +47,9 @@
     ]
   },
   "devDependencies": {
-    "jsonwebtoken": "^8.5.1"
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "jsonwebtoken": "^8.5.1",
+    "react-test-renderer": "^16.9.0"
   }
 }
