--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_ENDPOINT=https://stormy-beyond-18995.herokuapp.com
+API_ENDPOINT=https://fierce-anchorage-86985.herokuapp.com/api
 REACT_APP_TOKEN_KEY: 'jobreel-client-auth-token'
