--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_ENDPOINT=https://rocky-crag-74904.herokuapp.com/api
+API_ENDPOINT=https://warm-bastion-62347.herokuapp.com/api
 REACT_APP_TOKEN_KEY: 'jobReel-jwt-secret'
