--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-js-pagination": "^3.0.2",
     "react-oauth-flow": "^1.2.0",
     "react-paginate": "^6.3.0",
+    "react-responsive": "^7.0.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0",
