--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "client-oauth2": "^4.2.5",
     "cuid": "^2.1.6",
     "date-fns": "^1.30.1",
-    "jwt-decode": "^2.2.0",
+    "jwt-l.;/decode": "^2.2.0",
     "pure-react-carousel": "^1.21.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
