--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "cuid": "^2.1.6",
     "date-fns": "^1.30.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "pure-react-carousel": "^1.21.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-iframe": "^1.8.0",
     "react-js-pagination": "^3.0.2",
+    "react-moment": "^0.9.2",
     "react-oauth-flow": "^1.2.0",
     "react-paginate": "^6.3.0",
     "react-router": "^5.0.1",
