--- a/public/now.json
+++ b/public/now.json
@@ -1,15 +1,22 @@
 {
-    "version": 2,
-    "alias": "JobReel",
-    "name": "JobReel",
-    "routes": [
-        {
-          "src": "^/static/(.*)",
-          "dest": "/static/$1"
-        },
-        {
-          "src": ".*",
-          "dest": "/index.html"
-        }
-    ]
-  }
+  "version": 2,
+  "name": "JobReel",
+  "alias": "JobReel",
+  "routes": [
+      {
+        "src": "^/static/(.*)",
+        "dest": "/static/$1"
+      },
+      { "src": "^/favicon.ico$",
+        "dest": "/favicon.ico"
+      },
+      {
+        "src": "^/manifest.json$",
+        "dest": "/manifest.json"
+       },
+      {
+        "src": ".*",
+        "dest": "/index.html"
+      }
+  ]
+}
